added 'our tool' section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,24 @@
           Interferometry arrays—such as the VLA, ALMA and the EHT—consists of a defined arrangement of radio telescopes. Pairs of radio telescopes tune to a specific frequency, with closer telescopes characterizing smoother features and farther telescopes characterizing sharper features. The EHT is in the global range, with telescopes around the entire world. The placement of these telescopes affect the resolution and quality of the image produced. This tool simulates the image produced by the telescope range, allowing scientists to identify the optimal placement of telescopes. This can save both time and money as telescopes do not have to be built to see resolution improvement. The tool also allows for the addition of satellite telescopes to the array, which can further improve the quality and sharpness of produced images.
         </div>
         <hr>
+        <div class="columns is-centered has-text-centered">
+          <div class="column is-four-fifths">
+            <h2 class="title is-3">Our Tool</h2>
+          </div>
+        </div>
+
+
+        <div class="content has-text-justified">
+          Our tool allows users to simulate the image produced by an interferometry array. 
+          <br>
+          <br>
+          There are numerous inputs to the tool. The model image can be changed by uploading any image (such as a blackhole simulation image or various point sources). Array parameters (such as wavelength and duration) can be changed. Telescope locations can be moved, deleted or added (including the addition of satellites). Satellite parameters can be changed (such as eccentricity and arc perigee). Source direction can be changed as well.
+          <br>
+          <br>
+          In terms of outputs, the beam pattern, UV coverage and the dirty image can be viewed. The dirty image will be put through the CLEAN algorithm and the ehtim algorithm.
+        </div>
+        <br>
+
     </section>
 
 
