updated meta data

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="description"
-      content="BANF: Band-limited Neural Fields for Levels of Detail Reconstruction">
-    <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+      content="Astraeus: Radio Interferometry Simulation">
+    <meta name="keywords" content="VLBI, Astraeus">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Astraeus: Radio Interferometry Simulation</title>
 
